# pyabstractdatatype

./: .gitignore  LICENSE.txt  README.md  example.py  pyproject.toml
examples/: example.py
src/adt/: __init__.py
